# inflect_rs

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: cargo-build-test.yml
src/: inflect.rs  inflect_rs.rs  lib.rs
tests/: inflect_rs_tests.rs  inflect_tests.rs
